--- a/config.ini.example
+++ b/config.ini.example
@@ -15,6 +15,11 @@ endTime   = 09:15, 10:10, 11:10, 12:05, 14:45, 15:40, 16:35, 17:30, 19:45, 20:40
 #星期名缩写
 weekName = MO, TU, WE, TH, FR, SA, SU
 
+[contact]
+devName = Sky1Wu
+QQ = None
+github = #
+
 [Flask]
 SECRET_KEY = something only you know
 
